--- a/meditor/src/styles/common.less
+++ b/meditor/src/styles/common.less
@@ -4,6 +4,7 @@
 @border-color: rgba(0,0,0,0.05);
 //mixins style
 @md-font-size: 600;
+@max-width: 1280px;
 .md-font{
     font-weight: @md-font-size;
     font-size: 24px;
